--- a/src/libcore/SConscript
+++ b/src/libcore/SConscript
@@ -1,26 +1,24 @@
 Import('*')
 
-if env['PROTOCOL'] == 'None':
+if env['SYSTEM'] == 'None':
     Source('main.cpp', main=True, skip_lib=True)
 
-Source('Processor.cpp')
-Source('GProcessor.cpp')
-Source('LDSTQ.cpp')
-Source('SMTProcessor.cpp')
-Source('DInst.cpp')
-Source('Pipeline.cpp')
-Source('FetchEngine.cpp')
-Source('Resource.cpp')
-Source('Cluster.cpp')
-Source('DepWindow.cpp')
-Source('BPred.cpp')
-Source('MemRequest.cpp')
-Source('MemObj.cpp')
-Source('OSSim.cpp')
-Source('LDSTBuffer.cpp')
-Source('ProcessId.cpp')
-Source('RunningProcs.cpp')
-Source('GMemorySystem.cpp')
-Source('GMemoryOS.cpp')
-#Source('ValueTable.cpp')
-#Source('VPred.cpp')
+Source('Processor.cpp', lib="core")
+Source('GProcessor.cpp', lib="core")
+Source('LDSTQ.cpp', lib="core")
+Source('SMTProcessor.cpp', lib="core")
+Source('DInst.cpp', lib="core")
+Source('Pipeline.cpp', lib="core")
+Source('FetchEngine.cpp', lib="core")
+Source('Resource.cpp', lib="core")
+Source('Cluster.cpp', lib="core")
+Source('DepWindow.cpp', lib="core")
+Source('BPred.cpp', lib="core")
+Source('MemRequest.cpp', lib="core")
+Source('MemObj.cpp', lib="core")
+Source('OSSim.cpp', lib="core cmp")
+Source('LDSTBuffer.cpp', lib="core")
+Source('ProcessId.cpp', lib="core")
+Source('RunningProcs.cpp', lib="core")
+Source('GMemorySystem.cpp', lib="core")
+Source('GMemoryOS.cpp', lib="core")
