--- a/src/libemul/SConscript
+++ b/src/libemul/SConscript
@@ -1,10 +1,11 @@
 Import('*')
 
-Source('AddressSpace.cpp')
-Source('EmulInit.cpp')
-Source('ElfObject.cpp')
-Source('InstDesc.cpp')
-Source('LinuxSys.cpp')
-Source('SignalHandling.cpp')
-Source('FileSys.cpp')
+Source('AddressSpace.cpp', lib="emul")
+Source('EmulInit.cpp', lib="emul")
+Source('ElfObject.cpp', lib="emul")
+Source('InstDesc.cpp', lib="emul")
+Source('LinuxSys.cpp', lib="emul")
+Source('SignalHandling.cpp', lib="emul")
+Source('FileSys.cpp', lib="emul")
+
 #Source('X86InstDesc.cpp')
