--- a/src/libll/SConscript
+++ b/src/libll/SConscript
@@ -1,6 +1,6 @@
 Import('*')
 
-Source('Instruction.cpp')
-Source('GFlow.cpp')
-Source('ExecutionFlow.cpp')
-Source('ThreadContext.cpp')
+Source('Instruction.cpp', lib="ll")
+Source('GFlow.cpp', lib="ll")
+Source('ExecutionFlow.cpp', lib="ll")
+Source('ThreadContext.cpp', lib="ll")
