--- a/src/libmem/SConscript
+++ b/src/libmem/SConscript
@@ -1,12 +1,12 @@
 Import('*')
 
-Source('MemorySystem.cpp')
-Source('Cache.cpp')
-Source('Bank.cpp')
-Source('MemCtrl.cpp')
-Source('Bus.cpp')
-Source('MemoryOS.cpp')
-Source('TLB.cpp')
-Source('StridePrefetcher.cpp')
-Source('AddressPrefetcher.cpp')
-Source('PriorityBus.cpp')
+Source('MemorySystem.cpp', lib='mem')
+Source('Cache.cpp', lib='mem')
+Source('Bank.cpp', lib='mem')
+Source('MemCtrl.cpp', lib='mem')
+Source('Bus.cpp', lib='mem')
+Source('MemoryOS.cpp', lib='mem')
+Source('TLB.cpp', lib='mem')
+Source('StridePrefetcher.cpp', lib='mem')
+Source('AddressPrefetcher.cpp', lib='mem')
+Source('PriorityBus.cpp', lib='mem')
