--- a/src/libsmp/SConscript
+++ b/src/libsmp/SConscript
@@ -1,12 +1,16 @@
 Import('*')
 
-if env['PROTOCOL'] == 'None':
+if env['SYSTEM'] != 'SMP':
+    Return()
+
+if env['NETWORK'] != 'BUS':
     Return()
 
 Source('smp.cpp', main=True, skip_lib=True)
-Source('SMPCache.cpp')
-Source('SMPSystemBus.cpp')
-Source('SMemorySystem.cpp')
-Source('MESIProtocol.cpp')
-Source('SMPProtocol.cpp')
-Source('SMPMemRequest.cpp')
+
+Source('SMPCache.cpp', lib='smp')
+Source('SMPSystemBus.cpp', lib='smp')
+Source('SMemorySystem.cpp', lib='smp')
+Source('MESIProtocol.cpp', lib='smp')
+Source('SMPProtocol.cpp', lib='smp')
+Source('SMPMemRequest.cpp', lib='smp')
