Fix cmp64-noc config file

--- a/confs/cmp64-noc.conf
+++ b/confs/cmp64-noc.conf
@@ -237,8 +237,8 @@ score_S			= false
 data_disadv		= -1
 dimX            = 8
 dimY            = 8
-lowerLevel_net    ="NOC NOC shared"
-lowerLevel_bus    ="TLBus TBus shared"
+lowerLevel    ="NOC NOC shared"
+#lowerLevel_bus    ="TLBus TBus shared"
 
 [TLBus]
 deviceType = 'tlbus'
@@ -249,7 +249,7 @@ waitLimit	= 30
 lowerLevel    = "MemoryCtrl MemCtrl shared"
 
 [NOC]
-deviceType = 'noc'
+deviceType = 'booksim'
 booksim_config      = 'mesh88.booksim'
 booksim_output      = 'booksim.log'
 booksim_sample      = 1000000
