Move TransState into its own source file

--- a/src/libTM/SConscript
+++ b/src/libTM/SConscript
@@ -3,4 +3,5 @@ Import('*')
 Source('TMStorage.cpp', lib='TM')
 Source('TMCoherence.cpp', lib='TM')
 Source('TMContext.cpp', lib='TM')
+Source('TMState.cpp', lib='TM')
 Source('HWGate.cpp', lib='TM')
