Add private cache manager

--- a/src/libll/SConscript
+++ b/src/libll/SConscript
@@ -4,3 +4,4 @@ Source('Instruction.cpp', lib="ll")
 Source('GFlow.cpp', lib="ll")
 Source('ExecutionFlow.cpp', lib="ll")
 Source('ThreadContext.cpp', lib="ll")
+Source('PrivateCaches.cpp', lib="ll")
