--- a/src/libTM/SConscript
+++ b/src/libTM/SConscript
@@ -5,3 +5,4 @@ Source('TMCoherence.cpp', lib='TM')
 Source('TMContext.cpp', lib='TM')
 Source('TMState.cpp', lib='TM')
 Source('HWGate.cpp', lib='TM')
+Source('PrivateCache.cpp', lib='TM')
