--- a/src/libTM/SConscript
+++ b/src/libTM/SConscript
@@ -4,5 +4,6 @@ Source('TMStorage.cpp', lib='TM')
 Source('TMCoherence.cpp', lib='TM')
 Source('TMContext.cpp', lib='TM')
 Source('TMState.cpp', lib='TM')
-Source('HWGate.cpp', lib='TM')
+Source('TSXManager.cpp', lib='TM')
+Source('IdealTSXManager.cpp', lib='TM')
 Source('PrivateCache.cpp', lib='TM')
