--- a/src/libTM/SConscript
+++ b/src/libTM/SConscript
@@ -1,6 +1,7 @@
 Import('*')
 
 Source('HTMManager.cpp', lib='TM')
+Source('RWSetManager.cpp', lib='TM')
 Source('TMStorage.cpp', lib='TM')
 Source('TMContext.cpp', lib='TM')
 Source('TMState.cpp', lib='TM')
