Complete merge and clean up names

--- a/confs/requester-loses-trans.conf
+++ b/confs/requester-loses-trans.conf
@@ -1,10 +1,10 @@
 [TransactionalMemory]
 ### Coherence Protocol Options
-method                          = "IdealRequesterLoses"
+method                          = "PTM-RequesterLoses"
 
 ### Physical Cache Structure Options
 totalSize                       = $(l1CacheSize)
 assoc                           = $(l1CacheAssoc)
 lineSize                        = $(cacheLineSize)
 smtContexts                     = $(nThreads)
-
+overflowSize                    = 4
