--- a/confs/morereads-wins-trans.conf
+++ b/confs/morereads-wins-trans.conf
@@ -1,10 +1,10 @@
 [TransactionalMemory]
 ### Coherence Protocol Options
-method                          = "IdealMoreReadsWins"
+method                          = "PTM-MoreReadsWins"
 
 ### Physical Cache Structure Options
 totalSize                       = $(l1CacheSize)
 assoc                           = $(l1CacheAssoc)
 lineSize                        = $(cacheLineSize)
 smtContexts                     = $(nThreads)
-
+overflowSize                    = 4
